Fix crash trying to access password of empty account

The connect method of SessionPool discard the ImapAccount if it is not
empty the requestPassword method will try to fetch the password for the
empty account and this crash due to a null pointer dereference.

BUG: 435427
(cherry picked from commit 8344e0cc25d71267e684bf03d658b7f9d05b2d89)